# mdrunner

./: .gitignore  .oxfmtrc.json  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  RELEASING.md  bunfig.toml  dist-workspace.toml  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.plans/: clipboard-and-url-markdown-sources-progress.md  clipboard-and-url-markdown-sources.md  cross-platform-cargo-dist-releases.md  implement-mdrunner.md  migrate-mdrunner-to-rust.md  migrate-mdrunner-to-rust.progress.md  simplify-mdrunner-codebase.md
.progress/: bun-markdown-cli-feasibility.md
.reviews/: mdrunner-to-mdr-rename-audit.md  simplification-cleanup-review.md
scripts/: build.ts
src/: assets.rs  assets.ts  browser.rs  browser.ts  cli.rs  cli.ts  clipboard.rs  code.rs  document.ts  errors.ts  lib.rs  main.rs  main.ts  output.rs  output.ts  remote.rs  render.rs  render.ts  slug.ts  source.rs  source.ts  styles.css
src/plugins/: expressive-code.ts  headings.ts  images.ts  mermaid.ts  safety.ts  source-location.ts
tests/: cli.rs  render.rs
tests/cli/: cli.test.ts
tests/fixtures/documents/: complete.md  malformed-mermaid.md  raw-html.md  unsafe-protocol.md
tests/helpers/: temp-dir.ts
tests/integration/: code.test.ts  complete-document.test.ts  document.test.ts  images.test.ts  markdown.test.ts  mermaid.test.ts  render-pipeline.test.ts
tests/security/: authored-content.test.ts  authored-svg.test.ts  image-paths.test.ts  mermaid.test.ts  output-contract.test.ts
tests/standalone/: standalone.test.ts
tests/unit/: browser.test.ts  build.test.ts  main.test.ts  output.test.ts  slug.test.ts  source.test.ts
