[package]
name = "mdr"
version = "0.2.1"
edition = "2024"
rust-version = "1.91"
description = "Render Markdown as self-contained HTML with optional browser opening"
repository = "https://github.com/maxedapps/mdr"
homepage = "https://github.com/maxedapps/mdr"
readme = "README.md"
license = "MIT"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
arboard = { version = "=3.6.1", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22.1"
comrak = { version = "0.54.0", default-features = false }
lumis = { version = "=0.12.0", default-features = false, features = [
  "lang-bash",
  "lang-c",
  "lang-cpp",
  "lang-csharp",
  "lang-css",
  "lang-go",
  "lang-html",
  "lang-java",
  "lang-javascript",
  "lang-json",
  "lang-python",
  "lang-ruby",
  "lang-rust",
  "lang-sql",
  "lang-toml",
  "lang-tsx",
  "lang-typescript",
  "lang-yaml",
] }
mermaid-rs-renderer = { version = "=0.3.1", default-features = false }
percent-encoding = "2.3.2"
sha2 = "0.10.9"
tempfile = "3.23.0"
url = "2.5.7"
ureq = { version = "=3.3.0", default-features = false, features = ["rustls", "gzip"] }
webbrowser = { version = "1.0.6", default-features = false }

[dev-dependencies]
flate2 = "1.1.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
